--- a/02-vars.yml
+++ b/02-vars.yml
@@ -1,7 +1,7 @@
 - name: play level variables
   hosts: localhost
   vars:
-    URL:sample.example.com
+    URL:"sample.example.com"
   tasks:
     - ansible.builtin.debug:
-        msg: url = {{"URL"}}
+        msg: url = {{URL}}
