--- a/02-vars.yml
+++ b/02-vars.yml
@@ -1,10 +1,10 @@
-- name: play level variables
-  hosts: localhost
-  vars:
-    URL: "sample.example.com"
-  tasks:
-    - ansible.builtin.debug:
-        msg: url = {{ URL }}
+#- name: play level variables
+#  hosts: localhost
+#  vars:
+#    URL: "sample.example.com"
+#  tasks:
+#    - ansible.builtin.debug:
+#        msg: url = {{ URL }}
 
 - name: task level variables
   hosts: localhost
