--- a/02-vars.yml
+++ b/02-vars.yml
@@ -17,7 +17,7 @@
 - name: file level variables
   hosts: localhost
   vars_file:
-    var.yml
+    - var.yml
   tasks:
     - ansible.builtin.debug:
         msg: url = {{ URL }}
