--- a/03-runtimevariables.yml
+++ b/03-runtimevariables.yml
@@ -5,5 +5,5 @@
       ansible.builtin.shell: uptime
       register: purna
 
-      ansible.builtin.debug:
+    - ansible.builtin.debug:
         msg: "{{ purna }}"
