--- a/05-parameter-store.yml
+++ b/05-parameter-store.yml
@@ -2,4 +2,4 @@
   hosts: localhost
   tasks:
     ansible.builtin.debug:
-      “{{ lookup(‘amazon.aws.aws_ssm’, ‘test’) }}”
+      msg: “{{ lookup(‘amazon.aws.aws_ssm’, ‘test’) }}”
