--- a/01-sample.yml
+++ b/01-sample.yml
@@ -2,5 +2,5 @@
   hosts: localhost
   tasks:
     - ansible.builtin.debug:
-        msg: "{{ lookup('amazon.aws.aws_ssm', 'test'), region:'us-east-1' }}"
+        msg: "{{ lookup('amazon.aws.aws_ssm', 'test'), region 'us-east-1' }}"
 
