--- a/02-vars.yml
+++ b/02-vars.yml
@@ -28,4 +28,10 @@
     - ansible.builtin.debug:
         msg: url = {{ URL }}
 
+- name: extract url
+  debug:
+    msg: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz
+
+
+
 
