--- a/filters.yml
+++ b/filters.yml
@@ -1,3 +1,6 @@
 - name: cut the url
-  debug:
-    msg: "{{ "url" | "urlsplit" }"}
+  host: localhost
+  tasks:
+    - name: filter
+      debug:
+        msg: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz
