--- a/filters.yml
+++ b/filters.yml
@@ -1,6 +1,8 @@
 - name: cut the url
   hosts: localhost
+  vars:
+    url: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz
   tasks:
     - name: filter
       debug:
-        msg: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz
+        msg: "{{ "url" | "urlsplit" }}"
