--- a/filters.yml
+++ b/filters.yml
@@ -5,4 +5,4 @@
   tasks:
     - name: filter
       debug:
-        msg: "{{ url | split('/') | last | regex_replace('tar.gz', '') }}"
+        msg: "{{ url | split('/') | last | regex_replace('.tar.gz', '') }}"
