--- a/06-loop.yml
+++ b/06-loop.yml
@@ -4,6 +4,6 @@
     debug:
       msg: fruit name - {{ item }}
       loop:
-        - orange
-        - apple
-        - guva
+        - "orange"
+        - "apple"
+        - "guva"
