--- a/06-loop.yml
+++ b/06-loop.yml
@@ -1,6 +1,6 @@
 - name: concept
   hosts: localhost
   tasks:
-    debug:
-      msg: fruit name - {{ item }}
-      loop: apple, banana
+    - debug:
+        msg: fruit name - {{ item }}
+        loop: apple, banana
