--- a/06-loop.yml
+++ b/06-loop.yml
@@ -3,4 +3,6 @@
   tasks:
     - debug:
         msg: fruit name - {{ item }}
-        loop: apple, banana
+        loop:
+          - apple
+          - banana
