--- a/06-loop.yml
+++ b/06-loop.yml
@@ -6,3 +6,11 @@
       loop:
         - apple
         - banana
+
+    - debug:
+        msg:
+          fruit name - {{ item.name }}, {{ item.quantity }}
+      loop:
+        - {name:apple, quantity:5}
+        - {name:guva, quantity:5}
+
