--- a/06-loop.yml
+++ b/06-loop.yml
@@ -11,6 +11,6 @@
         msg:
           fruit name - {{ item.name }}, {{ item.quantity }}
       loop:
-        - {name:apple, quantity:5}
-        - {name:guva, quantity:5}
+        - {name:"apple", quantity:5}
+        - {name:"guva", quantity:5}
 
