--- a/06-loop.yml
+++ b/06-loop.yml
@@ -7,10 +7,15 @@
         - apple
         - banana
 
+- hosts:
+  tasks:
     - debug:
-        msg:
-          fruit name - {{ item.name }}, {{ item.quantity }}
+        msg: fruit name - {{ item.name }}, {{ item.quantity }}
       loop:
-        - {name:"apple", quantity:5}
-        - {name:"guva", quantity:5}
+        - { name:"apple", quantity:5 }
+        - { name:"guva", quantity:5 }
+
+
+
+
 
