--- a/06-loop.yml
+++ b/06-loop.yml
@@ -10,7 +10,8 @@
 - hosts: localhost
   tasks:
     - debug:
-        msg: fruit name - {{ item.name }}, {{ item.quantity }}
+        msg:
+         fruit name - {{ item.name }}, {{ item.quantity }}
       loop:
         - { name: "apple", quantity: 5 }
         - { name: "banana", quantity: 5 }
