--- a/filters.yml
+++ b/filters.yml
@@ -1,8 +1,17 @@
-- name: cut the url
+#- name: cut the url
+#  hosts: localhost
+#  vars:
+#    url: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz
+#  tasks:
+#    - name: filter
+#      debug:
+#        msg: "{{ url | split('/') | last | regex_replace('.tar.gz', '') }}"
+
+- name: filter the url
   hosts: localhost
   vars:
-    url: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz
+    url: https://github.com/prometheus/alertmanager/releases/download/v0.27.0-rc.0/alertmanager-0.27.0-rc.0.linux-amd64.tar.gz
   tasks:
-    - name: filter
+    - name: alertmanager filter
       debug:
         msg: "{{ url | split('/') | last | regex_replace('.tar.gz', '') }}"
