--- a/filters.yml
+++ b/filters.yml
@@ -1,17 +1,26 @@
-- name: cut the url
-  hosts: localhost
-  vars:
-    url: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz
-  tasks:
-    - name: filter
-      debug:
-        msg: "{{ url | split('/') | last | regex_replace('.tar.gz', '') }}"
+#- name: cut the url
+#  hosts: localhost
+#  vars:
+#    url: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz
+#  tasks:
+#    - name: filter
+#      debug:
+#        msg: "{{ url | split('/') | last | regex_replace('.tar.gz', '') }}"
+#
+#- name: filter the url
+#  hosts: localhost
+#  vars:
+#    url: https://github.com/prometheus/alertmanager/releases/download/v0.27.0-rc.0/alertmanager-0.27.0-rc.0.linux-amd64.tar.gz
+#  tasks:
+#    - name: alertmanager filter
+#      debug:
+#        msg: "{{ url | split('/') | last | regex_replace('.tar.gz', '') }}"
 
 - name: filter the url
   hosts: localhost
   vars:
-    url: https://github.com/prometheus/alertmanager/releases/download/v0.27.0-rc.0/alertmanager-0.27.0-rc.0.linux-amd64.tar.gz
+    url: https://github.com/prometheus/prometheus/releases/download/v2.51.1/prometheus-2.51.1.linux-amd64.tar.gz
   tasks:
     - name: alertmanager filter
       debug:
-        msg: "{{ url | split('/') | last | regex_replace('.tar.gz', '') }}"
+        msg: "{{ url | split('/') }}"
