--- a/filters.yml
+++ b/filters.yml
@@ -23,4 +23,4 @@
   tasks:
     - name: prometheus filter
       debug:
-        msg: "{{ url | split('/') }}"
+        msg: "{{ url | split('/') | lst | regex_replace('.tar,gz', '') }}"
